--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,10 @@
 body {
-  background-color: rgb(179, 225, 228);
+  width: 100%;
+  max-width: 1020px;
+  min-width: 768px;
+  margin: 0 auto;
+  padding: 0;
+  /* background-color: rgb(179, 225, 228); */
 }
 
 .add-item-row {
