UI in progress + CORS & api error solved

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,51 @@
-#root {
-  max-width: 1280px;
+body {
+  background-color: rgb(255, 255, 255);
+  max-width: 1020px;
+  min-width: 768px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* .container-box {
+  border-color: red;
+  border-width: 1px;
+  border-style: solid;
+} */
+.date-box {
+  width: 20rem;
+  height: 2.5rem;
+  border-color: rgb(240, 240, 240);
+  border-width: 3px;
+  border-style: solid;
+  border-radius: 9999px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.add-item-row {
+  display: flex;
 }
 
-.card {
-  padding: 2em;
+.input-box {
+  width: 20rem;
+  height: 2.5rem;
+  border-radius: 9999px;
+  border-color: rgb(240, 240, 240);
+  border-width: 3px;
+  border-style: solid;
+  margin-right: 10px;
+  padding-left: 20px;
 }
 
-.read-the-docs {
-  color: #888;
+.input-box::placeholder {
+  font-size: 16px;
+}
+
+.button-add {
+  width: 5rem;
+  height: 3rem;
+  border-radius: 9999px;
+  background-color: rgb(224, 93, 136);
+  color: white;
 }
