Using router + EditUserInfo component (WIP)

--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -1,6 +1,9 @@
 html,
 body {
+	width: 100%;
 	height: 100%;
+	padding: 0;
+	background-color: rgb(255, 255, 255);
 	margin: 0;
 }
 
@@ -17,7 +20,7 @@ body {
 	width: 90%;
 	height: 100%;
 	max-width: 400px;
-    max-height: 400px;
+	max-height: 400px;
 	background-color: white;
 	border-radius: 40px;
 	padding: 15px;
@@ -34,6 +37,7 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	padding: 5px 0;
 }
 
 .field-group label {
@@ -51,6 +55,11 @@ body {
 	box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
+#root {
+	width: 100%;
+	height: 100%;
+}
+
 #signin-button {
 	width: 100%;
 	height: 40px;
@@ -60,6 +69,10 @@ body {
 	margin-top: 12px;
 	color: white;
 	align-items: center;
+}
+#signin-button:hover {
+	background-color: rgb(94, 49, 201);
+	font-weight: bold;
 }
 
 #signup-button {
@@ -72,19 +85,21 @@ body {
 	color: white;
 	align-items: center;
 }
+#signup-button:hover {
+	background-color: rgb(220, 60, 115);
+	font-weight: bold;
+}
 
-/* Media Queries for Responsiveness */
 @media (max-width: 768px) {
 	.login-container {
 		width: 90%;
 		height: 100%;
-        max-height: 400px;
+		max-height: 400px;
 		padding: 20px;
 	}
 
 	.field-group {
 		flex-direction: column;
-		align-items: flex-start;
 	}
 
 	.field-group label,
@@ -95,7 +110,7 @@ body {
 
 	#signin-button,
 	#signup-button {
-		height: 50px;
+		height: 45px;
 	}
 }
 
@@ -103,7 +118,7 @@ body {
 	.login-container {
 		width: 90%;
 		height: 100%;
-        max-height: 600px;
+		max-height: 650px;
 		padding: 25px;
 	}
 
