--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,10 @@
 body {
-  width: 100%;
-  padding: 0;
-  background-color: rgb(255, 255, 255);
-  max-width: 1020px;
-  min-width: 768px;
-  margin: 0 auto;
+	width: 100%;
+	padding: 0;
+	background-color: rgb(255, 255, 255);
+	max-width: 1020px;
+	min-width: 768px;
+	margin: 0 auto;
 }
 
 .date-box {
@@ -53,35 +53,34 @@ body {
 	right: 20px;
 }
 
-#edit-button {
-	width: 7.5rem;
-	height: 2.5rem;
+#edit-button,
+#signout-button {
+	display: inline-block;
+	width: 120px;
+	height: 38px;
 	border-radius: 99px;
-	background-color: rgb(60, 193, 25);
 	box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
-	/* margin-top: 12px; */
-	margin-right: 6px;
 	color: white;
 	align-items: center;
+	text-align: center;
+	text-decoration: none;
 }
 
+#edit-button {
+	background-color: rgb(60, 193, 25);
+	margin-right: 6px;
+	line-height: 39px;
+}
 #edit-button:hover {
 	background-color: rgb(40, 110, 15);
+	font-weight: bold;
 }
 
 #signout-button {
-	width: 7.5rem;
-	height: 2.5rem;
-	border-radius: 99px;
-	/* background-color: rgb(249, 143, 67); */
 	background-color: rgb(255, 111, 125);
-	box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
-	/* margin-top: 12px; */
 	margin-left: 6px;
-	color: white;
-	align-items: center;
 }
-
 #signout-button:hover {
 	background-color: rgb(220, 50, 90);
+	font-weight: bold;
 }
