--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -16,6 +16,24 @@ body {
 	background-color: rgb(235, 226, 254);
 }
 
+.signup-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100vw;
+	background-color: rgb(252, 206, 210);
+}
+
+.edit-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100vw;
+	background-color: rgb(251, 235, 207);
+}
+
 .login-container {
 	width: 90%;
 	height: 100%;
@@ -30,6 +48,24 @@ body {
 	box-sizing: border-box;
 	display: grid;
 	place-items: center;
+}
+
+.edit-container {
+    width: 90%;
+    height: 40%;
+    max-width: 400px;
+    min-height: 400px;
+    max-height: 600px;
+    background-color: white;
+    border-radius: 40px;
+    /* padding: 15px; */
+    padding-bottom: 30px;
+    box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.2);
+    z-index: 4;
+    backdrop-filter: blur(1px);
+    box-sizing: border-box;
+    display: grid;
+    place-items: center;
 }
 
 .field-group {
@@ -90,12 +126,35 @@ body {
 	font-weight: bold;
 }
 
+#edit-info-button {
+	width: 100%;
+	height: 40px;
+	border-radius: 99px;
+	background-color: rgb(249, 159, 33);
+	box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
+	margin-top: 20px;
+	color: white;
+	align-items: center;
+}
+#edit-info-button:hover {
+	background-color: rgb(224, 143, 30);
+	font-weight: bold;
+}
+
 @media (max-width: 768px) {
 	.login-container {
 		width: 90%;
 		height: 100%;
 		max-height: 400px;
 		padding: 20px;
+	}
+
+	.edit-container {
+		width: 90%;
+		height: 60%;
+        min-height: 500px;
+		max-height: 600px;
+		/* padding: 20px; */
 	}
 
 	.field-group {
@@ -122,9 +181,16 @@ body {
 		padding: 25px;
 	}
 
+	.edit-container {
+		width: 90%;
+		height: 60%;
+        min-height: 650px;
+		max-height: 800px;
+	}
+
 	.field-group label,
 	.field-group input {
-		width: 100%;
+		width: 90%;
 		margin: 10px 0;
 	}
 
